--- a/package.json
+++ b/package.json
@@ -10,6 +10,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/styled": "^11.11.5",
+    "@mui/icons-material": "^5.15.21",
+    "@mui/material": "^5.15.21",
+    "@mui/styled-engine": "^5.15.14",
     "@mui/system": "^5.15.20",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
